# rust-blockchain-starter

./: Cargo.toml
src/: lib.rs  main.rs
src/contracts/: mod.rs  my_contract.rs
src/dapps/: mod.rs  storage_dapp.rs
