[package]
name = "my_blockchain_project"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

ipfs-api = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.30"

[lib]
name = "my_blockchain_project"
path = "src/lib.rs"

[[bin]]
name = "my_blockchain_project"
path = "src/main.rs"

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []